--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
